tests/NormalTests/paczka1/small_fuzzy/69319744.err
Error in line 4: MgxcWLpyyj7 S2 77,2
Error in line 12: 07NiyJHzeS8 A210 33,9
